@@ -1,3 +1,2 @@
 usr/bin/ccmake
-usr/share/doc/cmake/ccmake.* usr/share/doc/cmake-curses-gui/
 usr/share/man/man1/ccmake.1
