@@ -1,0 +1,10 @@
+Document: ccmake
+Title: Reference of curses based interface of CMake.
+Section: Programming
+
+Format: HTML
+Index: /usr/share/doc/cmake-docs/ccmake.html
+Files: /usr/share/doc/cmake-docs/ccmake.html
+
+Format: Text
+Files: /usr/share/doc/cmake-docs/ccmake.txt.gz
