@@ -1,0 +1,10 @@
+Document: cmake
+Title: Reference of CMake the Cross-Platform Makefile Generator.
+Section: Programming
+
+Format: HTML
+Index: /usr/share/doc/cmake-docs/cmake.html
+Files: /usr/share/doc/cmake-docs/cmake.html
+
+Format: Text
+Files: /usr/share/doc/cmake-docs/cmake.txt.gz
