@@ -1,0 +1,10 @@
+Document: cmake-commands
+Title: Command reference of CMake
+Section: Programming
+
+Format: HTML
+Index: /usr/share/doc/cmake-docs/cmake-commands.html
+Files: /usr/share/doc/cmake-docs/cmake-commands.html
+
+Format: Text
+Files: /usr/share/doc/cmake-docs/cmake-commands.txt.gz
