@@ -1,0 +1,10 @@
+Document: cmake-compatcommands
+Title: Reference of CMake compatibility commands
+Section: Programming
+
+Format: HTML
+Index: /usr/share/doc/cmake-docs/cmake-compatcommands.html
+Files: /usr/share/doc/cmake-docs/cmake-compatcommands.html
+
+Format: Text
+Files: /usr/share/doc/cmake-docs/cmake-compatcommands.txt.gz
