@@ -1,0 +1,10 @@
+Document: cmake-gui
+Title: Documentation of the Qt GUI for CMake
+Section: Programming
+
+Format: HTML
+Index: /usr/share/doc/cmake-docs/cmake-gui.html
+Files: /usr/share/doc/cmake-docs/cmake-gui.html
+
+Format: Text
+Files: /usr/share/doc/cmake-docs/cmake-gui.txt.gz
