@@ -1,0 +1,10 @@
+Document: cmake-policies
+Title: Reference of CMake policies.
+Section: Programming
+
+Format: HTML
+Index: /usr/share/doc/cmake-docs/cmake-policies.html
+Files: /usr/share/doc/cmake-docs/cmake-policies.html
+
+Format: Text
+Files: /usr/share/doc/cmake-docs/cmake-policies.txt.gz
