@@ -1,0 +1,10 @@
+Document: cmake-properties
+Title: Reference of CMake properties.
+Section: Programming
+
+Format: HTML
+Index: /usr/share/doc/cmake-docs/cmake-properties.html
+Files: /usr/share/doc/cmake-docs/cmake-properties.html
+
+Format: Text
+Files: /usr/share/doc/cmake-docs/cmake-properties.txt.gz
