@@ -1,0 +1,10 @@
+Document: cpack
+Title: Reference of the packaging driver provided by CMake.
+Section: Programming
+
+Format: HTML
+Index: /usr/share/doc/cmake-docs/cpack.html
+Files: /usr/share/doc/cmake-docs/cpack.html
+
+Format: Text
+Files: /usr/share/doc/cmake-docs/cpack.txt.gz
