@@ -1,0 +1,10 @@
+Document: ctest
+Title: Reference of the testing driver provided by CMake.
+Section: Programming
+
+Format: HTML
+Index: /usr/share/doc/cmake-docs/ctest.html
+Files: /usr/share/doc/cmake-docs/ctest.html
+
+Format: Text
+Files: /usr/share/doc/cmake-docs/ctest.txt.gz
