@@ -1,0 +1,3 @@
+usr/share/doc/cmake/*.html usr/share/doc/cmake-docs/
+usr/share/doc/cmake/*.txt usr/share/doc/cmake-docs/
+usr/share/doc/cmake/*.docbook usr/share/doc/cmake-docs/
