@@ -1,8 +1,5 @@
 usr/bin/cmake-gui
 usr/share/applications/CMake.desktop
-usr/share/doc/cmake/cmake-gui.docbook
-usr/share/doc/cmake/cmake-gui.html
-usr/share/doc/cmake/cmake-gui.txt
 usr/share/man/man1/cmake-gui.1
 usr/share/mime/packages/cmakecache.xml
 usr/share/pixmaps/CMakeSetup32.png
