@@ -69,3 +69,17 @@ Description: Qt4 based user interface for CMake (cmake-gui)
  settings may be specified interactively. Brief instructions are provided at
  the bottom of the window when the program is running. The main executable
  file for this GUI is "cmake-gui".
+
+Package: cmake-docs
+Architecture: all
+Depends: ${misc:Depends}
+Recommends: doc-base
+Section: doc
+Description: Extended documentation in various formats for CMake
+ CMake is used to control the software compilation process using simple
+ platform and compiler independent configuration files. CMake generates native
+ makefiles and workspaces that can be used in the compiler environment of your
+ choice.
+ .
+ This package provides additional documentation in various formats like HTML or
+ plain text.
